2010-12-13  Joone Hur  <joone@kldp.org>

Reviewed by Eric Seidel.

        WebKit fails to compile when building with WML support enabled
        https://bugs.webkit.org/show_bug.cgi?id=42943

        Use TextPosition instead of lineNumber() and columNumber().

        No new tests are added, because this is just a build fix.

        * dom/XMLDocumentParser.h: Make lineNumber() private.
        * wml/WMLErrorHandling.cpp:
        (WebCore::reportWMLError): Use TextPosition instead of lineNumber() and columnNumber().

Canonical link: https://commits.webkit.org/64326@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73975 268f45cc-cd09-0410-ab3c-d52691b4dbfc